--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -5,5 +5,17 @@
 </head>
 <body>
     Hi {{ person }}! I think you're {{ compliment }}!
+
+    <form action="/game" method='GET'>
+      Would you like to play a game?
+
+      <input type="radio" name="game" value="yes">
+      <label>Yes</label>
+
+      <input type="radio" name="game" value="no">
+      <label>No</label>
+
+      <input type="submit">
+    </form>
 </body>
 </html>
