Add needed request.args.get to show_madlib function and edit return, fix typos on madlib.html

--- a/templates/game.html
+++ b/templates/game.html
@@ -7,19 +7,23 @@
 
 <h1>Madlibs</h1>
 
-<form action="/madlib">
+<form action="/madlib" method="GET">
   <label for="person-input">Select a person:</label> 
   <input type="text" name="person" id="person-input">
+  <p></p>
 
   <label for="color-input">Select a color:</label>
   <input type="text" name="color" id="color-input">
+  <p></p>
 
   <label for="noun-input">Select a noun:</label>
-  <input type="text name="noun" id="noun-input">
+  <input type="text" name="noun" id="noun-input">
+  <p></p>
 
   <label for="adjective-input">Select an adjective:</label>
-  <input type="text name="adjective" id="adjective-input">
-  
+  <input type="text" name="adjective" id="adjective-input">
+  <p></p>
+
   <input type="submit">
 
 </form>
