Edit input name for selecting a color

--- a/templates/game.html
+++ b/templates/game.html
@@ -14,16 +14,16 @@
 
   <p>Select a color:
   <label for="color-input">Blue</label>
-  <input type="checkbox" name="color" value="blue" id="color-input">
+  <input type="checkbox" name="colors" value="blue" id="color-input">
 
   <label for="color-input">Orange</label>
-  <input type="checkbox" name="color" value="orange" id="color-input">
+  <input type="checkbox" name="colors" value="orange" id="color-input">
 
   <label for="color-input">Green</label>
-  <input type="checkbox" name="color" value="green" id="color-input">
+  <input type="checkbox" name="colors" value="green" id="color-input">
 
   <label for="color-input">Purple</label>
-  <input type="checkbox" name="color" value="purple" id="color-input">
+  <input type="checkbox" name="colors" value="purple" id="color-input">
   </p>
 
   <label for="noun-input">Enter a noun:</label>
