Correct typos in madlibs.py show_madlib function and madlib.html

--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -8,7 +8,7 @@
 <h1>Madlibs Story</h1>
 
 <p>There once was a 
-  {% for color in colors %}
+  {% for color in color_list %}
   {{ color }} 
   {% endfor %}
 
