Add css link to madlib.html, add css to madlibs.css

--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Your Madlibs</title>
+  <link rel="stylesheet" href="/static/madlibs.css" type="text/css">
 </head>
 <body>
 
