--- a/static/madlibs.css
+++ b/static/madlibs.css
@@ -1,1 +1,11 @@
-h1 {color:rgb(226, 117, 135)}
+h1 {
+    font-family: Arial;
+    text-align: center;
+    background-color: rgb(89, 152, 89);
+    color:rgb(255, 217, 223)
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+}
